[gd_scene load_steps=2 format=3 uid="uid://dougrwojepr52"]

[ext_resource type="Script" path="res://ui/pause_menu.gd" id="1_ujaqg"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 19.0
offset_top = 4.0
offset_right = 19.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ujaqg")

[node name="Resume" type="Button" parent="."]
process_mode = 2
layout_mode = 0
offset_left = 403.0
offset_top = 82.0
offset_right = 762.0
offset_bottom = 179.0
text = "Resume"

[node name="Fullscreen" type="Button" parent="."]
process_mode = 2
layout_mode = 0
offset_left = 403.0
offset_top = 242.0
offset_right = 762.0
offset_bottom = 339.0
text = "Screen Enhancer"

[node name="Quit" type="Button" parent="."]
process_mode = 2
layout_mode = 0
offset_left = 403.0
offset_top = 430.0
offset_right = 762.0
offset_bottom = 527.0
text = "Quit"

[node name="VolumeLabel" type="Label" parent="."]
layout_mode = 2
offset_left = 889.0
offset_top = 72.0
offset_right = 1031.0
offset_bottom = 95.0
text = "Master volume"

[node name="VolumeControl" type="HSlider" parent="."]
process_mode = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.92
anchor_top = 0.167
anchor_right = 0.92
anchor_bottom = 0.191
offset_left = -199.84
offset_top = -0.216003
offset_right = 0.160034
offset_bottom = 0.231987
max_value = 1.0
step = 0.001
value = 0.5
tick_count = 1

[node name="UpgradeLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 76.0
offset_right = 368.0
offset_bottom = 105.0
text = "Upgradeds"

[node name="PerformosportLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 115.0
offset_right = 318.0
offset_bottom = 138.0
text = "Performosports: 0"

[node name="NecroLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 152.0
offset_right = 318.0
offset_bottom = 175.0
text = "NecorglucerIForgotWhatIt'sCalled: 0"

[node name="MoneyLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 38.0
offset_right = 276.0
offset_bottom = 61.0
text = "Dollareydoos: "

[connection signal="button_down" from="Resume" to="." method="_on_resume_button_down"]
[connection signal="button_down" from="Fullscreen" to="." method="_on_fullscreen_button_down"]
[connection signal="button_down" from="Quit" to="." method="_on_quit_button_down"]
[connection signal="value_changed" from="VolumeControl" to="." method="_on_volume_control_value_changed"]
